force-app/main/default/objects/RE_Midday_Pricing__c/RE_Midday_Pricing__c.object-meta.xml
<CustomObject>
    <label>RE Midday Pricing</label>
    <nameField>
        <displayFormat>MDP-{000000000}</displayFormat>
        <label>RE Midday Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE Midday Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>