force-app/main/default/objects/RE_Midday_Pricing__c/fields/RE_Depot__c.field-meta.xml
<CustomField>
    <fullName>RE_Depot__c</fullName>
    <label>Depot</label>
    <length>50</length>
    <type>Text</type>
</CustomField>