force-app/main/default/objects/RE_Midday_Pricing__c/fields/RE_Estimated_Margin__c.field-meta.xml
<CustomField>
    <fullName>RE_Estimated_Margin__c</fullName>
    <formula>RE_Shell_Price__c - RE_Morning_Marginal_Cost__c - RE_Midday_Forecast_Price__c</formula>
    <label>Estimated Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>