force-app/main/default/objects/RE_Midday_Pricing__c/fields/RE_Market_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_Market_Price__c</fullName>
    <label>Market Price</label>
    <length>100</length>
    <type>Text</type>
</CustomField>