force-app/main/default/objects/RE_Midday_Pricing__c/fields/RE_Midday_Forecast_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_Midday_Forecast_Price__c</fullName>
    <label>Movement Forecast Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>