force-app/main/default/objects/RE_Midday_Pricing__c/fields/RE_Midday_Forecast_Up_Down__c.field-meta.xml
<CustomField>
    <fullName>RE_Midday_Forecast_Up_Down__c</fullName>
    <formula>IF(RE_Midday_Forecast_Price__c&gt;0,&apos;up&apos;,&apos;down&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Midday Forecast Up/Down</label>
    <type>Text</type>
</CustomField>