force-app/main/default/objects/RE_Midday_Pricing__c/fields/RE_Morning_Marginal_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_Morning_Marginal_Cost__c</fullName>
    <label>Morning Marginal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>