force-app/main/default/objects/RE_Midday_Pricing__c/fields/RE_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_Product__c</fullName>
    <label>Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>