force-app/main/default/objects/RE_Midday_Pricing__c/fields/RE_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>RE Midday Pricing</relationshipLabel>
    <relationshipName>RE_Midday_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>