force-app/main/default/objects/RE_Midday_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>RE_Depot__c</columns>
    <columns>RE_Shell_Price__c</columns>
    <columns>RE_Morning_Marginal_Cost__c</columns>
    <columns>RE_Midday_Forecast_Price__c</columns>
    <columns>RE_Market_Price__c</columns>
    <columns>RE_Estimated_Margin__c</columns>
    <columns>RE_Product_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>